Code V.3 : Do BG

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
   # example:
   assets:
     - assets/images/education.png
+    - assets/images/bg.png
+    - assets/images/bg.jpg
 
   fonts:
     - family: Kanit
